// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should create without errors  1`] = `
Object {
  "_by": undefined,
  "_created": undefined,
  "_id": undefined,
  "_mby": undefined,
  "_modified": undefined,
  "_order": undefined,
  "title": "Foo bar",
}
`;

exports[`Should get slug field by setting slug 1`] = `
Object {
  "_by": undefined,
  "_created": undefined,
  "_id": undefined,
  "_mby": undefined,
  "_modified": undefined,
  "_order": undefined,
  "title": "Foo bar",
  "title_slug": "foo-bar",
}
`;
